--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
   "name": "aqua-guard-raspi-client",
   "version": "1.0.0",
+  "description": "A Raspberry Pi client for the AquaGuard project to monitor and control GPIO-connected sensors and actuators.",
   "main": "piClient.js",
   "scripts": {
-    "start": "node piClient.js",
-    "dev": "nodemon piClient.js"
+    "start": "node piClient.js",  
+    "dev": "nodemon piClient.js",  
+    "lint": "eslint .",  
+    "test": "echo \"No tests configured\" && exit 0"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
-    "onoff": "^6.0.3",
-    "pigpio": "^3.3.1",
-    "spi-device": "^2.0.9"
+    "axios": "^1.7.9",           
+    "dotenv": "^16.4.7",         
+    "raspi": "^6.0.1",           
+    "raspi-gpio": "^6.2.2",      
+    "rpio": "^2.4.2"              
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+    "nodemon": "^3.1.9",         
+    "eslint": "^8.56.0"          
+  },
+  "engines": {
+    "node": ">=16.0.0",         
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/notanaas/aqua-guard-raspi-client.git"
+  },
+  "keywords": [
+    "raspberry-pi",
+    "gpio",
+    "aqua-guard",
+    "pool-monitoring",
+    "iot"
+  ],
+  "author": "Anas Alseid",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/notanaas/aqua-guard-raspi-client/issues"
+  },
+  "homepage": "https://github.com/notanaas/aqua-guard-raspi-client"
 }
