--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MAIN_SERVER_URL=http://192.168.1.15:3001/api/devices
+PRIMARY_SERVER=http://192.168.1.15:3001
+BACKUP_SERVER=http://localhost:3001
 DEVICE_SERIAL=DEV-1234567890
+LOGIN_ENDPOINT=http://192.168.1.15:3001/api/auth/login
+
