--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-PRIMARY_SERVER=http://192.168.1.15:3001
-BACKUP_SERVER=http://localhost:3001
-DEVICE_SERIAL=DEV-1234567890
-LOGIN_ENDPOINT=http://192.168.1.15:3001/api/auth/login
-
+SERIAL_NUMBER=DEV-1234567890
+API_URL=http://your-backend-url.com/api
