--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+
+BLOCKCHAIN_URL=http://127.0.0.1:7545
+CONTRACT_ADDRESS=0xeF9aCA8B9A3871C594de4C13d199D31Eb542BCf6
+CONTRACT_ABI=YOUR_CONTRACT_ABI_JSON_STRING
 SERIAL_NUMBER=DEV-1234567890
-API_URL=http://your-backend-url.com/api
