--- a/configs/settings.json
+++ b/configs/settings.json
@@ -1,27 +1,25 @@
 {
     "blockchain_url": "http://127.0.0.1:7545",
-    "contract_address": "0xeF9aCA8B9A3871C594de4C13d199D31Eb542BCf6",
+    "contract_address": "0xb82F2bd326aD783687af2929766e5A55E3d1DDD0",
     "contract_abi": [
         {
             "anonymous": false,
             "inputs": [
-                {"indexed": false, "internalType": "string", "name": "serialNumber", "type": "string"},
-                {"indexed": false, "internalType": "string", "name": "actuatorType", "type": "string"},
-                {"indexed": false, "internalType": "string", "name": "state", "type": "string"},
-                {"indexed": false, "internalType": "uint256", "name": "timestamp", "type": "uint256"}
-            ],
-            "name": "ActuatorStateUpdated",
-            "type": "event"
-        },
-        {
-            "anonymous": false,
-            "inputs": [
-                {"indexed": false, "internalType": "string", "name": "serialNumber", "type": "string"},
-                {"indexed": false, "internalType": "address", "name": "owner", "type": "address"}
+                {
+                    "indexed": false,
+                    "internalType": "string",
+                    "name": "serialNumber",
+                    "type": "string"
+                }
             ],
             "name": "DeviceRegistered",
             "type": "event"
-        },
-
-    ]
+        }
+    ],
+    "serial_number": "DEV-1234567890",
+    "read_interval": 5,
+    "gpio_pins": {
+        "water_switch": 17,
+        "motion_sensor": 27
+    }
 }
