--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-
 BLOCKCHAIN_URL=http://127.0.0.1:7545
 CONTRACT_ADDRESS=0xeF9aCA8B9A3871C594de4C13d199D31Eb542BCf6
-CONTRACT_ABI=YOUR_CONTRACT_ABI_JSON_STRING
+CONTRACT_ABI=./AquaGuard.json
 SERIAL_NUMBER=DEV-1234567890
