--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ BLOCKCHAIN_URL=http://127.0.0.1:7545
 CONTRACT_ADDRESS=0xeF9aCA8B9A3871C594de4C13d199D31Eb542BCf6
 CONTRACT_ABI=./AquaGuard.json
 SERIAL_NUMBER=DEV-1234567890
-SERVER_BASE_URL=192.168.1.15:3001
+SERVER_BASE_URL=http://192.168.1.15:3001
